--- a/code/work/01_基础总结深入/01_数据类型2.html
+++ b/code/work/01_基础总结深入/01_数据类型2.html
@@ -23,6 +23,18 @@
 -->
 
 <script type="text/javascript">
+  var a 
+  console.log(a)
+  function fn() {
+      
+  }
+  console.log(fn())
+  console.log(fn.xxx)
+  a = null
+  console.log(a)
+  a = {b:null}
+  console.log(a.b)
+  var b = null
 
 </script>
 </body>
