--- a/code/prepare/01_基础总结深入/03_对象.html
+++ b/code/prepare/01_基础总结深入/03_对象.html
@@ -40,7 +40,7 @@
   // 访问对象内部数据
   console.log(p.name, p['age'])
   p.setName('Jack')
-  p['age'](23)
+  p['setAge'](23)
   console.log(p['name'], p.age)
 
 </script>
