--- a/code/work/01_基础总结深入/01_数据类型.html
+++ b/code/work/01_基础总结深入/01_数据类型.html
@@ -28,7 +28,28 @@
 -->
 
 <script type="text/javascript">
+  var a
+  console.log(a,a === undefined,typeof a,typeof a === 'undefined')
+  a = 2
+  console.log(typeof a) // 'number'
+  a = 'atguigu'
+  console.log(typeof a) // 'string'
+  a = true
+  console.log(typeof a) // 'boolean'
+  a = null
+  console.log(typeof a, a===null) // 'object' true
 
+  // 对象类型
+  const b1 = {
+      b2: [12, 'abc', console.log]
+  }
+
+  console.log(b1 instanceof Object) // true
+  console.log(b1 instanceof Array) // false
+  console.log(b1.b2 instanceof Array) // true
+  console.log(b1.b2 instanceof Object) // true
+  console.log(b1.b2[2] instanceof Function, typeof b1.b2[2]==='function') //
+  console.log(b1.b2[2] instanceof Object) // true
 </script>
 </body>
 </html>
